fix drop down spacing and looped through supportecosystem cards

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -22,15 +22,16 @@
 }
 .drop-down-container {
   position: absolute;
-  width: 800px;
-  height: 450px;
+  width: 760px;
   border: 2px solid #3024c6;
   margin-top: 30px;
   margin-left: -920px;
   border-radius: 8px;
-  padding: 30px;
   z-index: 99;
   background-color: white;
+  /* padding: 20px; */
+  padding-top: 20px;
+  padding-bottom: 50px;
 }
 
 .drop-down-top-title {
@@ -38,13 +39,15 @@
   font-family: "Outfit", sans-serif;
   letter-spacing: 2px;
   display: inline-block;
-  margin-left: 60px;
+  margin-left: 79px;
   font-size: 22px;
+  margin-top: 24px;
 }
 
 h3.drop-down-info-title {
   color: #f259f9;
   font-size: 20px;
+  margin-top: 28px;
 }
 
 .drop-down-descriptions {
@@ -53,20 +56,26 @@ h3.drop-down-info-title {
   font-weight: lighter;
   font-size: 18px;
 }
+
 .drop-down-first-row-info,
-.drop-down-second-row-info {
+.drop-down-second-row-info,
+.drop-down-third-row-info {
   display: flex;
-  gap: 70px;
+  gap: 20px;
   padding-left: 30px;
   width: 700px;
   margin: 0 auto;
+  /* border: 2px solid pink; */
+}
+.drop-down-second-row-info {
+  margin-top: -10px;
 }
 .drop-down-info-hovered {
-  margin-top: 30px;
-  padding: 10px;
+  margin-top: 10px;
+  padding-left: 20px;
 }
 .drop-down-info-hovered:hover {
-  background-color: #ffe200;
+  background-color: #fff6b2;
   border-radius: 5px;
 }
 
